Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110023

Mouse Wheel broken inside Popup opened from a modal Popup

    XMLWordPrintable

Details

    • Windows
    • 731cc2dbf (dev), c2037e20a (6.5), 5f9417c35 (6.4)

    Description

      Opening a Popup (modal: false) inside another Popup (modal: true) breaks the mouse wheel functionality of the top level item. The modality of the lower level Popup filters the wheel event out. Changing the modality to false, enables the mouse wheel again.

       

      Suspicion: 

      The QQuickOverlay::eventFilter calls for a Wheel::Event the function popupItem->isAncestorOf(topItem) on the popupItem of the modal Popup, which is false if the topItem resides in another Popup. Thus, the EventFilter returns true. This Wheel::Event case is new in Qt6.4.1 compared to Qt5.12.2, in which I didn't run into this issue.

       

      Example:

      1) click into green square -> prints: "mouse press from green"

      2) use mouse wheel inside green square -> nothing

      Expected Behavior:

      1) use mouse wheel inside green square -> print: "wheel from green"

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vhilshei Volker Hilsheimer
              thefast Arthur Fast
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes